app/assets/stylesheets/_settings.scss
// Foundation by ZURB
// foundation.zurb.com
// Licensed under MIT Open Source

//

// Table of Contents
// Foundation Settings

// a. Base
// b. Grid
// c. Global
// d. Media Query Ranges
// e. Typography
// 01. Accordion
// 02. Alert Boxes
// 03. Block Grid
// 04. Breadcrumbs
// 05. Buttons
// 06. Button Groups
// 07. Clearing
// 08. Dropdown
// 09. Dropdown Buttons
// 10. Flex Video
// 11. Forms
// 12. Icon Bar
// 13. Inline Lists
// 14. Joyride
// 15. Keystrokes
// 16. Labels
// 17. Magellan
// 18. Off-canvas
// 19. Orbit
// 20. Pagination
// 21. Panels
// 22. Pricing Tables
// 23. Progress Bar
// 24. Range Slider
// 25. Reveal
// 26. Side Nav
// 27. Split Buttons
// 28. Sub Nav
// 29. Switch
// 30. Tables
// 31. Tabs
// 32. Thumbnails
// 33. Tooltips
// 34. Top Bar
// 36. Visibility Classes

// a. Base
// - - - - - - - - - - - - - - - - - - - - - - - - -

// This is the default html and body font-size for the base rem value.
// $rem-base: 16px;

// Allows the use of rem-calc() or lower-bound() in your settings
@import 'foundation/functions';

// The default font-size is set to 100% of the browser style sheet (usually 16px)
// for compatibility with browser-based text zoom or user-set defaults.

// Since the typical default browser font-size is 16px, that makes the calculation for grid size.
// If you want your base font-size to be different and not have it affect the grid breakpoints,
// set $rem-base to $base-font-size and make sure $base-font-size is a px value.
$base-font-size: 100%;

// The $base-font-size is 100% while $base-line-height is 150%
$base-line-height: 150%;

// We use this to control whether or not CSS classes come through in the gem files.
$include-html-classes: true;
// $include-print-styles: true;
$include-html-global-classes: $include-html-classes;

// b. Grid
// - - - - - - - - - - - - - - - - - - - - - - - - -

$include-html-grid-classes: $include-html-classes;
$include-xl-html-grid-classes: false;

$row-width: rem-calc(1000);
$total-columns: 12;
$column-gutter: rem-calc(30);

// c. Global
// - - - - - - - - - - - - - - - - - - - - - - - - -

// We use these to define default font stacks
$font-family-sans-serif: "Roboto", Helvetica, Roboto, Arial, sans-serif;
$font-family-serif: Georgia, Cambria, "Times New Roman", Times, serif;
$font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;

// We use these to define default font weights
$font-weight-normal: 400;
$font-weight-bold: 600;
$font-weight-medium: 500;
$font-weight-light: 300;

$white       : #FFFFFF;
$ghost       : #FAFAFA;
$snow        : #F9F9F9;
$vapor       : #F6F6F6;
$white-smoke : #F5F5F5;
$silver      : #EFEFEF;
$smoke       : #EEEEEE;
$gainsboro   : #DDDDDD;
$iron        : #CCCCCC;
$base        : #AAAAAA;
$aluminum    : #999999;
$jumbo       : #888888;
$monsoon     : #777777;
$steel       : #666666;
$charcoal    : #555555;
$tuatara     : #444444;
$oil         : #333333;
$jet         : #222222;
$black       : #000000;

$positive: #27AE60;
$mixed: #F2994A;
$negative: #CCCCCC;

// We use these as default colors throughout
$primary-color: #2D9CDB;
$secondary-color: #e7e7e7;
$alert-color: #EB5757;
$fail-color: #EB5757;
$success-color: #27AE60;
$warning-color: #F2994A;
$info-color: #a0d3e8;

$shadow-subtle: -3px 3px 10px -0px rgba(0,0,0,0.1);

// We use these to control various global styles
$body-bg: $white-smoke;
$body-font-color: $jet;
$body-font-family: $font-family-sans-serif;
$body-font-weight: $font-weight-normal;
$body-font-style: normal;

// We use this to control font-smoothing
// $font-smoothing: antialiased;

// We use these to control text direction settings
// $text-direction: ltr;
// $opposite-direction: right;
// $default-float: left;
// $last-child-float: $opposite-direction;

// We use these to make sure border radius matches unless we want it different.
// $global-radius: 3px;
// $global-rounded: 1000px;

// We use these to control inset shadow shiny edges and depressions.
// $shiny-edge-size: 0 1px 0;
// $shiny-edge-color: rgba($white, .5);
// $shiny-edge-active-color: rgba($black, .2);

// d. Media Query Ranges
// - - - - - - - - - - - - - - - - - - - - - - - - -

$small-breakpoint:  em-calc(640);
$medium-breakpoint: em-calc(1024);
$large-breakpoint:  em-calc(1440);
$xlarge-breakpoint: em-calc(1920);

$small-range:   (0, $small-breakpoint);
$medium-range:  ($small-breakpoint  + em-calc(1), $medium-breakpoint);
$large-range:   ($medium-breakpoint + em-calc(1), $large-breakpoint);
$xlarge-range:  ($large-breakpoint  + em-calc(1), $xlarge-breakpoint);
$xxlarge-range: ($xlarge-breakpoint + em-calc(1), em-calc(99999999));

$screen: "only screen";

$landscape: "#{$screen} and (orientation: landscape)";
$portrait: "#{$screen} and (orientation: portrait)";

$small-up: $screen;
$small-only: "#{$screen} and (max-width: #{upper-bound($small-range)})";

$medium-up: "#{$screen} and (min-width:#{lower-bound($medium-range)})";
$medium-only: "#{$screen} and (min-width:#{lower-bound($medium-range)}) and (max-width:#{upper-bound($medium-range)})";

$large-up: "#{$screen} and (min-width:#{lower-bound($large-range)})";
$large-only: "#{$screen} and (min-width:#{lower-bound($large-range)}) and (max-width:#{upper-bound($large-range)})";

$xlarge-up: "#{$screen} and (min-width:#{lower-bound($xlarge-range)})";
$xlarge-only: "#{$screen} and (min-width:#{lower-bound($xlarge-range)}) and (max-width:#{upper-bound($xlarge-range)})";

$xxlarge-up: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)})";
$xxlarge-only: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)}) and (max-width:#{upper-bound($xxlarge-range)})";

$retina: (
 "#{$screen} and (-webkit-min-device-pixel-ratio: 2)",
 "#{$screen} and (min--moz-device-pixel-ratio: 2)",
 "#{$screen} and (-o-min-device-pixel-ratio: 2/1)",
 "#{$screen} and (min-device-pixel-ratio: 2)",
 "#{$screen} and (min-resolution: 192dpi)",
 "#{$screen} and (min-resolution: 2dppx)"
/* ... */

